--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section class="contenedor-grid">
             <div class="card">
                 <div class="header">
-                    <img class="img-header" src="../images/image-jeremy.png" alt="Jeremy">
+                    <img class="img-header" src="../Layout Grid/images/image-jeremy.png" alt="Jeremy">
                      
                     <h4 class="report-header weight">Report for</h4>
 
@@ -97,7 +97,7 @@
 
             <div class="card1 color-card card-hover">
                 <div class="header-card1">
-                    <img class="img-header-card" src="../images/icon-work.svg" alt="Work">
+                    <img class="img-header-card" src="../Layout Grid/images/icon-workgit.svg" alt="Work">
                 </div>
 
                 <div class="mini-card">
@@ -114,7 +114,7 @@
 
             <div class="card2 color-card card-hover">
                 <div class="header-card2">
-                    <img class="img-header-card" src="../images/icon-play.svg" alt="Work">
+                    <img class="img-header-card" src="../Layout Grid/images/icon-play.svg" alt="Play">
                 </div>
 
                 <div class="mini-card">
@@ -131,7 +131,7 @@
 
             <div class="card3 color-card card-hover">
                 <div class="header-card3">
-                    <img class="img-header-card" src="../images/icon-study.svg" alt="Work">
+                    <img class="img-header-card" src="../Layout Grid/images/icon-study.svg" alt="Study">
                 </div>
 
                 <div class="mini-card">
@@ -148,7 +148,7 @@
 
             <div class="card4 color-card card-hover">
                 <div class="header-card4">
-                    <img class="img-header-card fix-image" src="../images/icon-exercise.svg" alt="Work">
+                    <img class="img-header-card fix-image" src="../Layout Grid/images/icon-exercise.svg" alt="Exercise">
                 </div>
 
                 <div class="mini-card">
@@ -165,7 +165,7 @@
 
             <div class="card5 color-card card-hover">
                 <div class="header-card5">
-                    <img class="img-header-card" src="../images/icon-social.svg" alt="Work">
+                    <img class="img-header-card" src="../Layout Grid/images/icon-social.svg" alt="Social">
                 </div>
 
                 <div class="mini-card">
@@ -182,7 +182,7 @@
 
             <div class="card6 color-card card-hover">
                 <div class="header-card6">
-                    <img class="img-header-card" src="../images/icon-self-care.svg" alt="Work">
+                    <img class="img-header-card" src="../Layout Grid/images/icon-self-care.svg" alt="Self-Care">
                 </div>
 
                 <div class="mini-card">
